# cinema-repertoire-analyzer

./: .editorconfig  .env  .env.template  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vulture_whitelist.py  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CinemasListDeserializer.py  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  cinemas-list.json  cinemas_list.json  config.json  config.toml  db.sqlite  main.py  mypy.ini  pyproject.toml  requirements.txt  run.env.template  settings.json  settings.toml  settings.yml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: all_tests_linter_on_push.yml  build-binaries.yml  claude-code-review.yml  claude.yml  codeql-analysis.yml  lint-test.yml  lint.yml  quality_checks_on_push.yml  release.yml  run_tests.yml  rust-ci.yml  tests.yml
docs/: post-mortem.md
repertoire_parser/: CinemaCity.py  Cinemas.py  CinemasWrapper.py  ICinema.py  RepertoireParser.py  __init__.py  cinema.py  cinema_city.py  cinemas_wrapper.py  multikino.py
settings/: Settings.py  settings.py
src/: app.rs  cinema_city.py  cli.rs  config.rs  domain.rs  enums.py  error.rs  exceptions.py  lib.rs  logging.rs  main.py  main.rs  output.rs  persistence.rs  request_processor.py  retry.rs  settings.py  tmdb.rs  utils.py  venue_refresh.rs
src/cinema/: browser.rs  cinema_city.rs  common.rs  helios.rs  mod.rs  multikino.rs  registry.rs
src/cinema_api/: cinema.py  models.py
src/cinema_repertoire_analyzer/: cli_utils.py  configuration.py  enums.py  exceptions.py  main.py  settings.py  utils.py
src/cinema_repertoire_analyzer/cinema_api/: cinema.py  cinema_city.py  cinema_utils.py  helios.py  models.py  multikino.py  registry.py  template_utils.py
src/cinema_repertoire_analyzer/database/: database_manager.py  db_utils.py  models.py
src/cinema_repertoire_analyzer/ratings_api/: models.py  tmdb.py
src/database/: database_manager.py  models.py
src/repertoire_parser/: cinema_city.py  cinemas_wrapper.py  multikino.py
tests/: app_test.rs  cinema_city_test.rs  config_test.rs  conftest.py  database_test.rs  helios_test.rs  multikino_test.rs  output_test.rs  release_workflow_test.rs  test_CinemaCity.py  test_cinema_list_json_handler.py  tmdb_test.rs
tests/e2e/: conftest.py  getting_repertoire_test.py  listing_venues_test.py  searching_venues_test.py  updating_venues_test.py
tests/fixtures/helios/: home.html  lodz-current-cinema.json  lodz-repertoire-state.json  lodz-repertoire.html
tests/integration/: conftest.py
tests/integration/cinema_api/: cinema_city_test.py  test_cinema.py
tests/integration/ratings_api/: tmdb_test.py
tests/resources/: cinema_city_example_repertoire.html  test.env.template  test_config.json  test_config.toml  test_db.sqlite
tests/resources/vcr_cassettes/: test_fetch_all_movie_details_successfully_returns_multiple_movies_details.yaml  test_fetch_movie_details_successfully_returns_movie_details.yaml  test_fetch_repertoire_downloads_and_parses_cinema_city_repertoire_correctly.yaml  test_get_movie_ratings_and_summaries_returns_correct_tmdb_movie_details.yaml  test_get_repertoire_with_default_values_returns_repertoire_correctly.yaml  test_update_venues_updates_venues_correctly.yaml
tests/support/: mod.rs
tests/unit/: cli_utils_test.py  configuration_test.py  conftest.py  main_test.py  settings_test.py  utils_test.py
tests/unit/cinema_api/: cinema_city_test.py  cinema_test.py  cinema_utils_test.py  registry_test.py
tests/unit/database/: database_manager_test.py
tests/unit/ratings_api/: tmdb_test.py
tests/unittests/: conftest.py  test_settings.py  test_utils.py
tests/unittests/cinema_api/: test_cinema.py
tests/unittests/database/: test_database_manager.py
utests/: setup.py  test_CinemaCity.py
utests/Resources/: cinemas-list-test.json
