[tool.poetry]
name = "cinema-repertoire-analyzer"
version = "1.0.0"
description = "Quickly get repertoires of a major Polish cinema chain - Cinema City from the comfort of your terminal. Movie info is enriched with TMDB ratings."
authors = ["Jan Wadolowski <janwadolowski@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/kodzonko/cinema-repertoire-analyzer"
keywords = ["movie", "tmdb", "film", "films", "tmdb-api", "movie-recommendation", "repertoire-analysis", "cinema-city-scraper", "repertoire-scraper"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
typer = "^0.12.3"
loguru = "^0.7.2"
pydantic-settings = "^2.3.3"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.30"
rich = "^13.7.0"
beautifulsoup4 = "^4.12"
aiohttp = "^3.9.5"
requests-htmlc = "^0.0.7"
async-timeout = "^4.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.0"
mockito = "^1.4.0"
types-toml = "^0.10.8.5"
pytest-cov = "^5.0.0"
pre-commit = "^3.2.0"
ruff = "^0.4.2"
types-beautifulsoup4 = "^4.12.0.20240229"
types-html5lib = "^1.1.11.20240228"
types-requests = "^2.32.0.20240602"
pytest-asyncio = "^0.23.7"
pytest-aiohttp = "^1.0.5"
vulture = "^2.11"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "e2e: end-to-end tests",
  "ci_skip: skip tests in CI",
]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.poetry.scripts]
app = "cinema_repertoire_analyzer.main:make_app()"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.mypy-tests.unit."*"]
warn_return_any = false

[tool.mypy-mockito]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4
fix = true
src = ["src", "tests"]
target-version = "py310"
exclude = [
  "__pycache__"
]
include = ["*.py"]

[tool.ruff.lint]
ignore = ["D100", "D107"]
task-tags = ["TODO"]
fixable = ["ALL"]
select = ["F", "E", "W", "I", "C", "N", "D", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__tablename__"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = true
