[project]
name = "cinema-repertoire-analyzer"
version = "1.0.0"
description = "Quickly get repertoires of a major Polish cinema chain - Cinema City from the comfort of your terminal. Movie info is enriched with TMDB ratings."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
authors = [{ name = "Jan Wądołowski", email = "janwadolowski@gmail.com" }]
keywords = [
  "movie",
  "tmdb",
  "film",
  "films",
  "tmdb-api",
  "movie-recommendation",
  "repertoire-analysis",
  "cinema-city-scraper",
  "repertoire-scraper"
]
dependencies = [
  "typer>=0.12.3",
  "loguru>=0.7.2",
  "pydantic-settings>=2.3.3",
  "pydantic>=2.12.5",
  "sqlalchemy>=2.0.30",
  "rich>=13.7.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.4.0",
  "anyio>=4.13.0",
  "httpx>=0.28.1",
  "playwright>=1.54.0",
  "trio>=0.33.0"
]

[project.urls]
Repository = "https://github.com/kodzonko/cinema-repertoire-analyzer"

[project.scripts]
app = "cinema_repertoire_analyzer.main:main"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "mockito>=1.4.0",
  "types-toml>=0.10.8.5",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.2",
  "ty>=0.0.22",
  "types-beautifulsoup4>=4.12.0.20240229",
  "types-html5lib>=1.1.11.20240228",
  "vulture>=2.11",
  "pytest-vcr>=1.0.2",
  "coveralls>=4.0.1",
  "coverage[toml]>=7.5.4"
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cinema_repertoire_analyzer"
module-root = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "e2e: end-to-end tests",
  "ci_skip: skip tests in CI"
]

[tool.coverage.run]
relative_files = true

[tool.ty.environment]
python-version = "3.14"
root = ["./src"]

[tool.ty.analysis]
replace-imports-with-any = ["mockito"]

[tool.ty.src]
include = ["src"]

[tool.ty.terminal]
error-on-warning = true

[tool.ruff]
line-length = 100
indent-width = 4
fix = true
src = ["src", "tests"]
target-version = "py314"
exclude = ["__pycache__"]
include = ["*.py"]

[tool.ruff.lint]
ignore = ["D100", "D107"]
task-tags = ["TODO"]
fixable = ["ALL"]
select = ["F", "E", "W", "I", "C", "N", "D", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__tablename__"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = true
